refactor: minor issues